@@ -330,6 +330,7 @@ Josselin Mouette                    joss@debian.org
 Juan F. Codagnone                   juam@arnet.com.ar
 Juan M. Guerrero                    st001906@hrz1.hrz.tu-darmstadt.de
 Julian Bradfield                    jcb@inf.ed.ac.uk
+Julian Büning                       julian.buening@rwth-aachen.de
 Jungshik Shin                       jshin@pantheon.yale.edu
 Juraj Marko                         jmarko@redhat.com
 Jürgen Fluk                         louis@dachau.marco.de
